--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Pygments==2.2.0
 PyMySQL==0.9.2
 python-dateutil==2.7.3
 pytz==2018.5
+redis==3.0.1
 requests==2.19.1
 requests-kerberos==0.12.0
 requests-ntlm==1.1.0
@@ -26,5 +27,6 @@ six==1.11.0
 sqlalchemy==1.2.0b2
 tornado==5.1
 tzlocal==1.5.1
+ujson==1.35
 urllib3==1.23
 winkerberos==0.7.0
