--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,34 @@
-bson==0.5.7
 asn1crypto==0.24.0
-cached-property==1.4.3
-certifi==2018.8.24
-cffi==1.11.5
+bson==0.5.8
+cached-property==1.5.1
+certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
-cryptography==2.3.1
-defusedxml==0.5.0
-dnspython==1.15.0
-exchangelib==1.11.4
-future==0.16.0
-idna==2.7
+cryptography==2.7
+defusedxml==0.6.0
+dnspython==1.16.0
+exchangelib==1.12.5
+future==0.17.1
+greenlet==0.4.15
+idna==2.8
 isodate==0.6.0
-lxml==4.2.4
-ntlm-auth==1.2.0
-Pillow==5.2.0
-pycparser==2.18
-Pygments==2.2.0
-PyMySQL==0.9.2
-python-dateutil==2.7.3
-pytz==2018.5
-redis==3.0.1
-requests==2.19.1
-requests-kerberos==0.12.0
+lxml==4.2.1
+meld3==1.0.2
+ntlm-auth==1.3.0
+Pillow==6.1.0
+pycparser==2.19
+Pygments==2.4.2
+PyMySQL==0.9.3
+python-dateutil==2.8.0
+pytz==2019.1
+redis==3.2.1
+requests==2.22.0
 requests-ntlm==1.1.0
-six==1.11.0
-sqlalchemy==1.2.0b2
-tornado==5.1
+six==1.12.0
+SQLAlchemy==1.3.5
+supervisor==4.0.3
+tornado==6.0.3
 tzlocal==1.5.1
 ujson==1.35
-urllib3==1.23
-winkerberos==0.7.0
+urllib3==1.25.3
+uWSGI==2.0.18
